--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -10,21 +10,53 @@
     color: white;
 }
 
-.clap-switch{
+.clap-switch {
     height: 80px;
     width: 620px;
     background-color: black;
     position: relative;
-    top: -10px;
     right: 0;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-left: 93px;
     left: 0;
+    transform-origin: left bottom;
+    transform: rotate(-8deg); 
+    transition: all ease 0.4s;
+}
+
+.clap-switch:hover{
+    transform: rotate(0deg); 
+}
+
+.lower-switch{
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.left-skew-rect{
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    z-index: 999;
+    transform: skew(-30deg, 0);
+}
+
+.right-skew-rect{
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    z-index: 999;
+    transform: skew(-30deg, 0);
 }
 
 .rest{
     width: 620px;
     background-color: black;
     text-transform: uppercase;
-    
 }
 
 .rest h1{
