--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -1,7 +1,6 @@
-.main{
+.preloader{
     width: 100%;
     height: 100vh;
-    background: rebeccapurple;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,9 +25,9 @@
     transition: all ease 0.4s;
 }
 
-.clap-switch:hover{
+/* .clap-switch:hover{
     transform: rotate(0deg); 
-}
+} */
 
 .lower-switch{
     height: 80px;
