--- a/src/components/preloader/preloader.css
+++ b/src/components/preloader/preloader.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    background: rebeccapurple;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -25,9 +26,9 @@
     transition: all ease 0.4s;
 }
 
-/* .clap-switch:hover{
+.clap-switch:hover{
     transform: rotate(0deg); 
-} */
+}
 
 .lower-switch{
     height: 80px;
