--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -1,7 +1,7 @@
 .person-card {
     height: 320px;
     width: 288px;
-    background-color: #f9f9f9;
+    background-color: beige;
     border-radius: 16px;
     display: flex;
     justify-content: center;
