--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -1,13 +1,13 @@
 .person-card {
     height: 320px;
     width: 288px;
-    background-color: beige;
+    background-color: #D9D9D9;
     border-radius: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
     transition: transform 0.3s ease-in-out;
   }
   
@@ -30,7 +30,7 @@
   .details h2 {
     width: 100%;
     height: 40px;
-    margin: 8px 0; 
+    margin: 8px 0 0 0; 
     color: #333;
     text-align: center;
     font-family: 'Inter', sans-serif;
