--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -1,15 +1,16 @@
 .person-card {
-    height: 360px;
-    width: 288px;
-    background-color: #D9D9D9;
-    border-radius: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-    transition: all 0.3s ease-in-out;
-  }
+  height: 360px;
+  width: 288px;
+  background-color: #D9D9D9;
+  border-radius: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 0 10px orange, 0 0 10px #51589c, 0 0 10px orange, 0 0 10px orange;
+  transition: all 0.3s ease-in-out;
+  
+}
   
   .person-card:hover {
     transform: scale(1.05);
