--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -3,12 +3,12 @@
     color: rgb(68, 67, 67);
 }
 
-a{
+.nav-text{
     position: relative;
     padding: 0 8px;
 }
 
-a:after{
+.nav-text:after{
     content: "";
     position: absolute;
     background-color: #b56f1c;
@@ -19,7 +19,7 @@ a:after{
     transition: 0.3s;
 }
 
-a:hover:after{
+.nav-text:hover:after{
      width: 100%;
 
 }
