--- a/src/components/event/cards/card.css
+++ b/src/components/event/cards/card.css
@@ -67,3 +67,33 @@
         padding: 0;
     }
 }
+@keyframes expandCard {
+    0% {
+      height: auto;
+    }
+    100% {
+      height: auto;
+      opacity: 1;
+    }
+  }
+  
+  @keyframes collapseCard {
+    0% {
+      height: auto;
+      opacity: 1;
+    }
+    100% {
+      height: 0;
+      /* opacity: 0; */
+    }
+  }
+  
+  .expanded-content {
+    animation: expandCard 0.5s forwards;
+    overflow: hidden;
+  }
+  
+  .event-card[style*="animation-name: collapseCard"] .expanded-content {
+    animation: collapseCard 0.5s forwards;
+  }
+  
