--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -8,8 +8,7 @@
   align-items: center;
   flex-direction: column;
   box-shadow: 0 0 10px orange, 0 0 10px #51589c, 0 0 10px orange, 0 0 10px orange;
-  transform: translateY(100%);
-  opacity: 0;
+  opacity: 1;
 }
 
 
@@ -28,7 +27,7 @@
 }
 
 .profile-pic{
-  opacity: 0;
+  opacity: 1;
 }
 
 .profile-pic img {
@@ -41,14 +40,14 @@
 }
 
 .profile-pic img:hover {
-  transform: scale(1.05);
+
 }
 
 .details {
   display: flex;
   flex-direction: column;
   align-items: center;
-  opacity: 0;
+  opacity: 1;
 }
 
 .details .details__name {
@@ -68,4 +67,53 @@
   color: #666;
   font-size: 16px;
   margin: 4px 0;
+}
+
+@keyframes slideFromBottom {
+  from{
+      transform: translateY(80px);
+      opacity: 0;
+  }
+
+  to{
+      transform: translateY(0px);
+      opacity: 1;
+  }
+}
+
+@keyframes appear{
+  from{
+    opacity: 0;
+  }
+
+  to{
+    opacity: 1;
+  }
+}
+
+@keyframes beat {
+  from{
+    transform: scale(0.95);
+  }
+
+  to{
+      transform: scale(1.05);
+  }
+}
+
+.slide__bottom{
+  animation: slideFromBottom 1s ease 0.5s 1 normal both;
+}
+
+
+.show{
+  animation: appear 1s ease 0.8s 1 normal both;
+}
+
+.show2{
+  animation: appear 1s ease 1.2s 1 normal both;
+}
+
+.beat{
+  animation: beat 0.5s ease 1.8s infinite alternate-reverse both;
 }
