--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,4 +1,7 @@
-/* Default styles for the Navigation component */
+.nav{
+    background: linear-gradient(90deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%);
+}
+
 .nav-text {
     font-size: 1.4rem;
     color: rgb(68, 67, 67);
