--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -79,13 +79,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
   opacity: 1;
 }
 
 .details .details__name {
   width: 100%;
   height: 40px;
-  margin: 8px 0 0 0;
   color: #333;
   text-align: center;
   font-family: 'Inter', sans-serif;
