--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -2,3 +2,7 @@
     background-image: url(src/assets/img/HOME.svg);
     background-color: rgba(0, 0, 0, 0.27);
 }
+
+.timeline-super-div{
+    background: linear-gradient(90deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%); 
+}
