--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -1,7 +1,7 @@
 .person-card {
   height: 360px;
   width: 288px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d974;
   border-radius: 16px;
   display: flex;
   justify-content: center;
