--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
  
+body{
+  /* background: linear-gradient(90deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%); */
+}
 
 @layer base {
   :root {
