--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -1,5 +1,7 @@
 .home-container{
     background-image: url(src/assets/img/HOME.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: rgba(0, 0, 0, 0.27);
 }
 
