--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -23,3 +23,8 @@
     transform: translateX(50%); 
   }
   
+  @media screen and (max-width: 640px) {
+    .timeline-container {
+        width: 100%;
+      }
+  }
