--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,4 +1,4 @@
-.nav{
+.nav {
     background: linear-gradient(270deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%);
 }
 
@@ -24,27 +24,81 @@
     width: 100%;
 }
 
+.nav-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 3rem;
+}
+
 @media screen and (max-width: 640px) {
     .nav-text {
-        display: none;
+        display: flex;
+        flex-direction: column;
+        color: white;
     }
 
-    .nav-items{
-        display: none;
+    .nav-menu{
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
     }
 
-    .nav-logo {
+    .nav-items {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 50vw; 
+        background: rgb(0, 33, 65);
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: 1;
+        padding: 20px;
+        color: white; 
+    }
+
+    .nav-text{
+        z-index: 2;
+        /* background-color: red; */
+    }
+
+    .nav-items.active {
+        transform: translateX(0);
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: none;
+        z-index: 0;
+    }
+
+    .overlay.active {
         display: block;
     }
 
-    .logo{
+    .logo {
         height: 5.5rem;
     }
 
     .hamburger-icon {
         display: block;
         justify-self: right;
-        margin-right: -60%;
+        margin-right: 1rem;
         cursor: pointer;
+    }
+
+    .nav-menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
