major changes to design

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,31 @@ body{
   /* background: linear-gradient(90deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%); */
 }
 
+@font-face {
+  font-family: "Rialto";
+  src: url(assets/fonts/RialtoNF.otf);
+}
+
+@font-face {
+  font-family: "Movie";
+  src: url(assets/fonts/Movie\ Poster\ Personal\ Use.ttf);
+}
+
+@font-face {
+  font-family: "Net";
+  src: url(assets/fonts/FontsFree-Net-House-of-cards-W03-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Undev";
+  src: url(assets/fonts/Undeveloped.ttf);
+}
+
+@font-face {
+  font-family: "Undev-Book";
+  src: url(assets/fonts/UndevelopedBook.ttf);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -28,6 +53,11 @@ body{
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
+
+    --main: black;
+    --accent-1: #EB26A2;
+    --accent-2: #0B88FD;
+    --main-light: white; 
   }
 
   .dark {
