--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,7 @@
+.footer-main{
+    /* background-color: var(--accent-2); */
+}
+
 @media screen and (max-width : 600px) {
     .right-footer{
         display: none;
