--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -1,13 +1,13 @@
 .person-card {
   height: 360px;
   width: 288px;
-  background-color: #d9d9d974;
+  background-color: #fafafa23;
   border-radius: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  box-shadow: 0 0 10px orange, 0 0 10px #51589c, 0 0 10px orange, 0 0 10px orange;
+  box-shadow: 0 0 10px var(--accent-1), 0 0 10px var(--accent-2), 0 0 10px var(--accent-1), 0 0 10px var(--accent-1);
   opacity: 1;
 
 }
@@ -30,7 +30,7 @@
   right: 0;
   left: 0;
   z-index: -1;
-  background: linear-gradient(180deg, rgba(255,215,0,1) 0%, rgba(255,144,28,1) 75%);
+  background: linear-gradient(180deg, var(--accent-1) 0%, var(--accent-2) 70%);
   transition: transform 300ms ease-in-out;
   transform: scaleY(0);
   transform-origin: bottom;
@@ -86,7 +86,7 @@
 .details .details__name {
   width: 100%;
   height: 40px;
-  color: #333;
+  color: white;
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-size: 18px;
@@ -96,7 +96,7 @@
 }
 
 .details h3 {
-  color: #666;
+  color: whitesmoke;
   font-size: 16px;
   margin: 4px 0;
 }
