--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -25,3 +25,10 @@
 .timeline-super-div {
     background: linear-gradient(90deg, var(--accent-1) 20%, var(--accent-2) 90%);
 }
+
+
+@media screen and (max-width: 640px) {
+    .timeline-wrapper:nth-child(even){
+        flex-direction: row;
+    }
+}
