--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
-body{
-  /* background: linear-gradient(90deg, rgba(253, 212, 6, 0.50) 50%, rgba(247, 153, 50, 0.50) 100%); */
+
+
+/* index.css or global styles */
+body {
+  margin: 0;
+  overflow-x: hidden;
 }
+
+.root{
+  overflow-x: hidden;
+}
+
+/* Add any other styles you need */
 
 @font-face {
   font-family: "Rialto";
