--- a/src/components/mousemover/mousefollwer.css
+++ b/src/components/mousemover/mousefollwer.css
@@ -1,10 +1,10 @@
 /* CircleCursor.css */
 .circle-cursor {
     position: fixed;
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
-    background-color: #ff0000; /* You can customize the color */
+    background-color: white; /* You can customize the color */
     pointer-events: none; /* Ensures the cursor does not interfere with interactions */
     transform: translate(-50%, -50%);
     z-index: 9999; /* Ensure the cursor is on top of other elements */
