--- a/src/components/people_card/person.css
+++ b/src/components/people_card/person.css
@@ -64,6 +64,8 @@
 
 .profile-pic img {
   width: 180px;
+  height: 180px;
+  object-fit: cover;
   margin-top: 16px;
   margin-bottom: 12px;
   padding: 3px;
