--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -24,6 +24,7 @@
 
 .timeline-super-div {
     background: linear-gradient(90deg, var(--accent-1) 20%, var(--accent-2) 90%);
+    /* background-image: url(public/img/Patten.webp); */
 }
 
 
