--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -52,7 +52,8 @@
         right: 0;
         height: 100vh;
         width: 30vw; 
-        background: var(--accent-2);
+        background: var(--main);
+        opacity: 0.9;
         transform: translateX(100%);
         transition: transform 0.3s ease-in-out;
         z-index: 1;
