--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -1,6 +1,6 @@
 .home-container {
     position: relative;
-    background-image: url(img/MAIN-01-01.svg);
+    background-image: url(./landing-main.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.295);
@@ -29,7 +29,7 @@
     background: linear-gradient(90deg, var(--accent-1) 20%, var(--accent-2) 90%);
 }
 .timeline-pattern{
-    background-image: url(img/pattern3.png);
+    background-image: url(./pattern3.png);
     /* opacity: 0.6; */
 }
 
